// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddressOverviewTile component should render correctly 1`] = `
<Styled(AccountOverviewTile)
  ctaLink="/account?id=address-book"
  ctaPath="/account/address-book"
  ctaTitle="View Address Book"
  title="Address Book"
>
  <Styled(BodyCopy)
    className="heading"
    color="text.primary"
    component="div"
    fontFamily="primary"
    fontSize={12}
    fontWeight="regular"
    letterSpacing="normal"
    lineHeight="normal"
    textAlign="left"
  >
    <Styled(Row)
      fullBleed={true}
    >
      <Styled(Col)
        colSize={
          Object {
            "large": 10,
            "medium": 7,
            "small": 5,
          }
        }
      >
        <Styled(BodyCopy)
          className={null}
          color="text.primary"
          component="div"
          fontFamily="secondary"
          fontSize="fs14"
          fontWeight="extrabold"
          letterSpacing="normal"
          lineHeight="normal"
          textAlign="left"
        >
          Default Shiping Address
        </Styled(BodyCopy)>
      </Styled(Col)>
      <Styled(Col)
        colSize={
          Object {
            "large": 2,
            "medium": 1,
            "small": 1,
          }
        }
      >
        <Styled(BodyCopy)
          className={null}
          color="text.primary"
          component="span"
          fontFamily="secondary"
          fontSize="fs14"
          fontWeight="regular"
          letterSpacing="normal"
          lineHeight="normal"
          textAlign="left"
        >
          <Styled(Anchor)
            anchorVariation="primary"
            asPath="/account/address-book/edit-address/undefined"
            fontSizeVariation="medium"
            to="/account?id=edit-address&addressId=undefined"
            underline={true}
          >
            Edit
          </Styled(Anchor)>
        </Styled(BodyCopy)>
      </Styled(Col)>
    </Styled(Row)>
    <Styled(Row)
      className="elem-mb-XL"
      fullBleed={true}
    >
      <Styled(Col)
        colSize={
          Object {
            "large": 10,
            "medium": 7,
            "small": 5,
          }
        }
      >
        <Address
          address={
            Object {
              "addressLine": Array [
                "addressline 1",
                "addressline 2",
              ],
              "city": "test city",
              "country": "test country",
              "firstName": "test",
              "lastName": "test",
              "phone1": "1234567890",
              "primary": "true",
              "xcont_isDefaultBilling": "true",
            }
          }
          isDefault={false}
          showCountry={false}
          showName={true}
          showPhone={true}
        />
      </Styled(Col)>
    </Styled(Row)>
  </Styled(BodyCopy)>
  <Styled(BodyCopy)
    className="elem-mt-LRG"
    color="text.primary"
    component="div"
    fontFamily="primary"
    fontSize={12}
    fontWeight="regular"
    letterSpacing="normal"
    lineHeight="normal"
    textAlign="left"
  >
    <Styled(Row)
      fullBleed={true}
    >
      <Styled(Col)
        colSize={
          Object {
            "large": 10,
            "medium": 7,
            "small": 5,
          }
        }
      >
        <Styled(BodyCopy)
          className={null}
          color="text.primary"
          component="div"
          fontFamily="secondary"
          fontSize="fs14"
          fontWeight="extrabold"
          letterSpacing="normal"
          lineHeight="normal"
          textAlign="left"
        >
          Default Billing Address
        </Styled(BodyCopy)>
      </Styled(Col)>
      <Styled(Col)
        colSize={
          Object {
            "large": 2,
            "medium": 1,
            "small": 1,
          }
        }
      >
        <Styled(Anchor)
          anchorVariation="primary"
          asPath="/account/payment"
          fontSizeVariation="medium"
          to="/account?id=payment"
          underline={true}
        >
          Edit
        </Styled(Anchor)>
      </Styled(Col)>
    </Styled(Row)>
    <Styled(Row)
      className="elem-mb-XXL"
      fullBleed={true}
    >
      <Styled(Col)
        colSize={
          Object {
            "large": 10,
            "medium": 7,
            "small": 5,
          }
        }
      >
        <Address
          address={
            Object {
              "addressLine": Array [
                "addressline 1",
                "addressline 2",
              ],
              "city": "test city",
              "country": "test country",
              "firstName": "test",
              "lastName": "test",
              "phone1": "1234567890",
              "primary": "true",
              "xcont_isDefaultBilling": "true",
            }
          }
          isDefault={false}
          showCountry={false}
          showName={true}
          showPhone={true}
        />
      </Styled(Col)>
    </Styled(Row)>
  </Styled(BodyCopy)>
</Styled(AccountOverviewTile)>
`;

exports[`AddressOverviewTile render empty address component should render correctly 1`] = `
<Styled(AccountOverviewTile)
  ctaLink="/account?id=address-book"
  ctaPath="/account/address-book"
>
  <Styled(BodyCopy)
    className="heading"
    color="text.primary"
    component="div"
    fontFamily="primary"
    fontSize={12}
    fontWeight="regular"
    letterSpacing="normal"
    lineHeight="normal"
    textAlign="left"
  >
    <Styled(Row)
      fullBleed={true}
    >
      <Styled(Col)
        colSize={
          Object {
            "large": 10,
            "medium": 7,
            "small": 5,
          }
        }
      >
        <Styled(BodyCopy)
          className={null}
          color="text.primary"
          component="div"
          fontFamily="secondary"
          fontSize="fs14"
          fontWeight="extrabold"
          letterSpacing="normal"
          lineHeight="normal"
          textAlign="left"
        />
      </Styled(Col)>
      <Styled(Col)
        colSize={
          Object {
            "large": 2,
            "medium": 1,
            "small": 1,
          }
        }
      >
        <Styled(BodyCopy)
          className={null}
          color="text.primary"
          component="span"
          fontFamily="secondary"
          fontSize="fs14"
          fontWeight="regular"
          letterSpacing="normal"
          lineHeight="normal"
          textAlign="left"
        >
          <Styled(Anchor)
            anchorVariation="primary"
            asPath="/account/address-book/add-new-address"
            fontSizeVariation="medium"
            to="/account?id=address-book&subSection=add-new-address"
            underline={true}
          />
        </Styled(BodyCopy)>
      </Styled(Col)>
    </Styled(Row)>
    <Styled(Row)
      className="elem-mb-XL"
      fullBleed={true}
    >
      <Styled(Col)
        colSize={
          Object {
            "large": 10,
            "medium": 7,
            "small": 5,
          }
        }
      >
        <Styled(BodyCopy)
          className={null}
          color="text.primary"
          component="p"
          fontFamily="secondary"
          fontSize="fs14"
          fontWeight="regular"
          letterSpacing="normal"
          lineHeight="normal"
          textAlign="left"
        />
      </Styled(Col)>
    </Styled(Row)>
  </Styled(BodyCopy)>
  <Styled(BodyCopy)
    className="elem-mt-LRG"
    color="text.primary"
    component="div"
    fontFamily="primary"
    fontSize={12}
    fontWeight="regular"
    letterSpacing="normal"
    lineHeight="normal"
    textAlign="left"
  >
    <Styled(Row)
      fullBleed={true}
    >
      <Styled(Col)
        colSize={
          Object {
            "large": 10,
            "medium": 7,
            "small": 5,
          }
        }
      >
        <Styled(BodyCopy)
          className={null}
          color="text.primary"
          component="div"
          fontFamily="secondary"
          fontSize="fs14"
          fontWeight="extrabold"
          letterSpacing="normal"
          lineHeight="normal"
          textAlign="left"
        />
      </Styled(Col)>
      <Styled(Col)
        colSize={
          Object {
            "large": 2,
            "medium": 1,
            "small": 1,
          }
        }
      >
        <Styled(Anchor)
          anchorVariation="primary"
          asPath="/account/payment/add-credit-card"
          fontSizeVariation="medium"
          to="/account?id=add-credit-card"
          underline={true}
        />
      </Styled(Col)>
    </Styled(Row)>
    <Styled(Row)
      className="elem-mb-XXL"
      fullBleed={true}
    >
      <Styled(Col)
        colSize={
          Object {
            "large": 10,
            "medium": 7,
            "small": 5,
          }
        }
      >
        <Styled(BodyCopy)
          className={null}
          color="text.primary"
          component="p"
          fontFamily="secondary"
          fontSize="fs14"
          fontWeight="regular"
          letterSpacing="normal"
          lineHeight="normal"
          textAlign="left"
        />
      </Styled(Col)>
    </Styled(Row)>
  </Styled(BodyCopy)>
</Styled(AccountOverviewTile)>
`;

exports[`AddressOverviewTile render empty address should render empty address correctly 1`] = `
<Styled(AccountOverviewTile)
  ctaLink="/account?id=address-book"
  ctaPath="/account/address-book"
>
  <Styled(BodyCopy)
    className="heading"
    color="text.primary"
    component="div"
    fontFamily="primary"
    fontSize={12}
    fontWeight="regular"
    letterSpacing="normal"
    lineHeight="normal"
    textAlign="left"
  >
    <Styled(Row)
      fullBleed={true}
    >
      <Styled(Col)
        colSize={
          Object {
            "large": 10,
            "medium": 7,
            "small": 5,
          }
        }
      >
        <Styled(BodyCopy)
          className={null}
          color="text.primary"
          component="div"
          fontFamily="secondary"
          fontSize="fs14"
          fontWeight="extrabold"
          letterSpacing="normal"
          lineHeight="normal"
          textAlign="left"
        />
      </Styled(Col)>
      <Styled(Col)
        colSize={
          Object {
            "large": 2,
            "medium": 1,
            "small": 1,
          }
        }
      >
        <Styled(BodyCopy)
          className={null}
          color="text.primary"
          component="span"
          fontFamily="secondary"
          fontSize="fs14"
          fontWeight="regular"
          letterSpacing="normal"
          lineHeight="normal"
          textAlign="left"
        >
          <Styled(Anchor)
            anchorVariation="primary"
            asPath="/account/address-book/add-new-address"
            fontSizeVariation="medium"
            to="/account?id=address-book&subSection=add-new-address"
            underline={true}
          />
        </Styled(BodyCopy)>
      </Styled(Col)>
    </Styled(Row)>
    <Styled(Row)
      className="elem-mb-XL"
      fullBleed={true}
    >
      <Styled(Col)
        colSize={
          Object {
            "large": 10,
            "medium": 7,
            "small": 5,
          }
        }
      >
        <Styled(BodyCopy)
          className={null}
          color="text.primary"
          component="p"
          fontFamily="secondary"
          fontSize="fs14"
          fontWeight="regular"
          letterSpacing="normal"
          lineHeight="normal"
          textAlign="left"
        />
      </Styled(Col)>
    </Styled(Row)>
  </Styled(BodyCopy)>
  <Styled(BodyCopy)
    className="elem-mt-LRG"
    color="text.primary"
    component="div"
    fontFamily="primary"
    fontSize={12}
    fontWeight="regular"
    letterSpacing="normal"
    lineHeight="normal"
    textAlign="left"
  >
    <Styled(Row)
      fullBleed={true}
    >
      <Styled(Col)
        colSize={
          Object {
            "large": 10,
            "medium": 7,
            "small": 5,
          }
        }
      >
        <Styled(BodyCopy)
          className={null}
          color="text.primary"
          component="div"
          fontFamily="secondary"
          fontSize="fs14"
          fontWeight="extrabold"
          letterSpacing="normal"
          lineHeight="normal"
          textAlign="left"
        />
      </Styled(Col)>
      <Styled(Col)
        colSize={
          Object {
            "large": 2,
            "medium": 1,
            "small": 1,
          }
        }
      >
        <Styled(Anchor)
          anchorVariation="primary"
          asPath="/account/payment/add-credit-card"
          fontSizeVariation="medium"
          to="/account?id=add-credit-card"
          underline={true}
        />
      </Styled(Col)>
    </Styled(Row)>
    <Styled(Row)
      className="elem-mb-XXL"
      fullBleed={true}
    >
      <Styled(Col)
        colSize={
          Object {
            "large": 10,
            "medium": 7,
            "small": 5,
          }
        }
      >
        <Styled(BodyCopy)
          className={null}
          color="text.primary"
          component="p"
          fontFamily="secondary"
          fontSize="fs14"
          fontWeight="regular"
          letterSpacing="normal"
          lineHeight="normal"
          textAlign="left"
        />
      </Styled(Col)>
    </Styled(Row)>
  </Styled(BodyCopy)>
</Styled(AccountOverviewTile)>
`;
